# banking-ai-notebooks

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01-numpy-financial-fundamentals.ipynb
src/: __init__.py  financial_engine.py  utils.py
tests/: __init__.py  test_financial_engine.py
