[project]
name = "banking-ai-notebooks"
version = "0.1.0"
description = "A comprehensive collection of Python notebooks teaching financial calculations using numpy_financial"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "realei", email = "realei@example.com" }
]
keywords = ["finance", "numpy-financial", "loan", "mortgage", "kaggle"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "numpy>=1.24.0",
    "numpy-financial>=1.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
# Kaggle has these pre-installed, we list them for local parity
kaggle = [
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/realei/banking-ai-notebooks"
Repository = "https://github.com/realei/banking-ai-notebooks"
"Related Project" = "https://github.com/realei/personal-loan-advisor-agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
